cabal-version:      3.0
name:               pushover-cli
version:            0.1.0.0
synopsis:           A simple CLI tool to send pushover notifications
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dhananjay Balan
maintainer:         mail@dbalan.in
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable pushover-cli
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
